force-app/main/default/src/objects/Pending_Lead_Mapping_MVN__mdt/Pending_Lead_Mapping_MVN__mdt.object-meta.xml
<CustomObject>
    <description>When the Libtayo API call is received it creates a Pending Consumer which is later converted into a Lead. This contains mappings for that converstion.</description>
    <label>Pending Consumer API Mapping</label>
    <pluralLabel>Pending Consumer API Mappings</pluralLabel>
</CustomObject>