force-app/main/default/src/objects/Pending_Lead_Mapping_MVN__mdt/fields/JSON_Field_MVN__c.field-meta.xml
<CustomField>
    <fullName>JSON_Field_MVN__c</fullName>
    <label>JSON Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>