force-app/main/default/src/objects/Pending_Lead_Mapping_MVN__mdt/fields/Lead_Field_MVN__c.field-meta.xml
<CustomField>
    <fullName>Lead_Field_MVN__c</fullName>
    <label>Consumer Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>