force-app/main/default/src/objects/Pending_Lead_Mapping_MVN__mdt/fields/Pending_Consumer_Field_MVN__c.field-meta.xml
<CustomField>
    <fullName>Pending_Consumer_Field_MVN__c</fullName>
    <label>Pending Consumer Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>